--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
                   <a class="nav-link" href="#service"> Service </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#portfolio"> Portfolio </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#contact-us">Contact </a>
+                  <a class="nav-link" href="https://wa.me/+919503259382?text=Hi">Contact </a>
                 </li>
               </ul>
             </div>
