--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                       It’s your time to grow your business with us.
                     </p>
                     <a href="https://wa.me/+919503259382?text=Hi" class="">
-                      Read More
+ Contact Now
                     </a>
                   </div>
                 </div>
@@ -117,7 +117,7 @@
 
                     </p>
                     <a href="https://wa.me/+919503259382?text=Hi" class="">
-                      Read More
+                      Contact Now
                     </a>
                   </div>
                 </div>
