--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ We are just starting but soon will update wonderful portfolio        </p>
               <div>
                 <br>
                 <p>
-                Upsite Digital Solutions
+                Upsite Digital Solutions <br>
                  Plot No-30 , <br> 
                  near Saswade hospital, near chetak Ghoda chowk,
                  <br> Jai Vishwa Bharti Colony,
